--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "react-bootstrap": "^2.7.2",
     "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "react-xmasonry": "^3.0.6",
     "slick-carousel": "^1.8.1",
-    "typed.js": "^2.0.132",
+    "typed.js": "^2.0.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
