--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.6",
     "react-xmasonry": "^3.0.6",
     "slick-carousel": "^1.8.1",
     "typed.js": "^2.0.16",
